test/expected/declare_+o_eq_rck_rk=delete-c++03.out
struct S; declare = of structure S as deleted member operator (reference to ...
         ^
10: error: "deleted" is illegal for operator until C++11
